# esp-se050

./: CMakeLists.txt  Kconfig  NOTICE  README.md  idf_component.yml
include/: esp_se050.h  esp_se050_session_cfg.h
nanopackage/apdu/scp03/mbedtls/: se05x_scp03_crypto_mbedtls.c
nanopackage/mbedtls_alt/: ecdsa_se05x.c  se05x_mbedtls.c
port/: sm_i2c.c  sm_port.h  sm_timer.c
src/: esp_se050.c
